profile wallet ready

--- a/Profile/src/Components/Profile/Profile.css
+++ b/Profile/src/Components/Profile/Profile.css
@@ -1,25 +1,21 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 #profile_Box {
     padding: 30px 100px;
 }
-#profile_Desc {
-    display: flex;
-    gap: 30px;
-    margin-top: 30px;
-}
-/* .profile_Money_Details{
-    color: #333333;
+#profile_Box p{
     font-size: 16px;
-} */
-.profile_wiz_oyo{
-    width: 50px;
-    height: 50px;
+    line-height: 1.56;
 }
-/* .profile_wiz_oyo>img{
-    width: 100%;
-    border-radius: 50%;
-} */
+#profile_Desc {
+  display: flex;
+  gap: 30px;
+  margin-top: 30px;
+}
+.profile_wiz_oyo {
+  width: 50px;
+  height: 50px;
+}
