--- a/Profile/src/Components/Partner/JoinForm/JoinForm.css
+++ b/Profile/src/Components/Partner/JoinForm/JoinForm.css
@@ -1,5 +1,9 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
+
+*{
+  font-family: "Roboto", sans-serif;
+}
 .saveCancel:hover{
-    border: 1px solid #ee2e24;
     background-color: white;
     color: #ee2e24;
 }
