--- a/product-details/src/components/DescNav/DescNav.css
+++ b/product-details/src/components/DescNav/DescNav.css
@@ -4,7 +4,14 @@
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+}
+.kk_nav a {
   color: grey;
+  text-decoration: none;
 }
 .kk_nav > div {
   display: flex;
@@ -13,7 +20,7 @@
 .kk_nav > :last-child {
   color: black;
 }
-.kk_nav p:hover {
+.kk_nav a:hover {
   cursor: pointer;
   color: red;
 }
