--- a/product-details/src/components/maindata/ContainerLeft.css
+++ b/product-details/src/components/maindata/ContainerLeft.css
@@ -25,5 +25,17 @@ h1 {
   padding: 5px;
 }
 .heading > div:last-of-type > p {
-  margin: 0;
+  margin-top: 0;
+}
+
+.pink {
+  background-color: #fff6ee;
+  display: flex;
+  width: 35%;
+  margin-top: 10px;
+  cursor: pointer;
+  justify-content: flex-start;
+  color: #f49242;
+  padding: 5px;
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
