--- a/Profile/src/Components/Profile/Profile.css
+++ b/Profile/src/Components/Profile/Profile.css
@@ -5,5 +5,14 @@
 }
 #profile_Box {
   padding: 30px 100px;
-  
+}
+@media (max-width: 985px) {
+  #profile_Box {
+    padding: 20px 60px;
+  }
+}
+@media (max-width: 550px) {
+  #profile_Box {
+    padding: 10px 30px;
+  }
 }
