--- a/Profile/src/Components/Profile/Wallet/Wallet.css
+++ b/Profile/src/Components/Profile/Wallet/Wallet.css
@@ -11,3 +11,13 @@
   width: 50px;
   height: 50px;
 }
+@media (max-width: 985px) {
+  #profile_Desc {
+    display: unset;
+  }
+  #profile_Desc > div {
+    /* border: 2px solid red; */
+    margin-top: 30px;
+    width: 100%;
+  }
+}
