--- a/oyo-rooms/src/App.css
+++ b/oyo-rooms/src/App.css
@@ -2,37 +2,17 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.maindata {
+  display: grid;
+  grid-template-columns: 60% 33%;
+  width: 90%;
+  margin: auto;
+  padding: 10px;
+  justify-content: space-between;
+  gap: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (min-width: 321px) and (max-width: 480px) {
+  .maindata {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
