--- a/OyoRooms/src/App.css
+++ b/OyoRooms/src/App.css
@@ -1,6 +1,8 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
 
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
