--- a/OyoRooms/src/Components/SIGNUP/common.css
+++ b/OyoRooms/src/Components/SIGNUP/common.css
@@ -3,7 +3,7 @@
 
 /* Sign_Up LogIn navbar css start */
 #sl-nav {
-  height: 120px;
+  /* height: 120px; */
   color: white;
   display: flex;
   align-items: center;
@@ -24,6 +24,10 @@
 /* Sign_Up LogIn navbar css End */
 
 /* Below navbar parts css Start */
+#LoginSignup{
+  font-weight: 600;
+  /* font-family: "Roboto", sans-serif; */
+}
 #wrap-main-div {
   background: rgb(0, 0, 0, 0.5)
     url("https://assets.oyoroomscdn.com/cmsMedia/b3c9905c-31d1-4349-8594-c07deae6b36d.jpg");
@@ -44,6 +48,7 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(255, 249, 249);
+  border-radius: 4px;
 }
 .s-red-div {
   background-color: #da1b42;
@@ -57,8 +62,10 @@
   display: flex;
   flex-direction: column;
   width: 430px;
-  height: 400px;
+  /* height: 400px; */
   padding: 20px;
-  padding-bottom: 52px;
+  /* padding-bottom: 52px; */
+  /* border: 2px solid red; */
+  /* border-radius: 4px; */
 }
 /* Below navbar parts css End */
