--- a/OyoRooms/src/Components/SIGNUP/common.css
+++ b/OyoRooms/src/Components/SIGNUP/common.css
@@ -48,7 +48,8 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(255, 249, 249);
-  border-radius: 4px;
+  border-radius: 5px;
+  /* width: 30%; */
 }
 .s-red-div {
   background-color: #da1b42;
@@ -69,3 +70,9 @@
   /* border-radius: 4px; */
 }
 /* Below navbar parts css End */
+#SignupButton:hover{
+  background-color: #1ab64f;
+  color: white;
+  border-radius: unset;
+  font-weight: 600;
+}
